logs/dag_id=duplicate_check/run_id=duplicate_check__2025-05-20T145210.343704/task_id=run_duplicate_check/attempt=1.log
[2025-05-20T14:52:10.874+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2025-05-20T14:52:10.894+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: duplicate_check.run_duplicate_check duplicate_check__2025-05-20T14:52:10.343704 [queued]>
[2025-05-20T14:52:10.901+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: duplicate_check.run_duplicate_check duplicate_check__2025-05-20T14:52:10.343704 [queued]>
[2025-05-20T14:52:10.902+0000] {taskinstance.py:2306} INFO - Starting attempt 1 of 1
[2025-05-20T14:52:10.917+0000] {taskinstance.py:2330} INFO - Executing <Task(PythonOperator): run_duplicate_check> on 2025-05-20 14:52:10.356457+00:00
[2025-05-20T14:52:10.921+0000] {warnings.py:112} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:62: DeprecationWarning: This process (pid=102) is multi-threaded, use of fork() may lead to deadlocks in the child.
  pid = os.fork()

[2025-05-20T14:52:10.922+0000] {standard_task_runner.py:64} INFO - Started process 103 to run task
[2025-05-20T14:52:10.922+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'duplicate_check', 'run_duplicate_check', 'duplicate_check__2025-05-20T14:52:10.343704', '--job-id', '20', '--raw', '--subdir', 'DAGS_FOLDER/Duplicate_check.py', '--cfg-path', '/tmp/tmp6p4nfbp7']
[2025-05-20T14:52:10.923+0000] {standard_task_runner.py:91} INFO - Job 20: Subtask run_duplicate_check
[2025-05-20T14:52:10.966+0000] {task_command.py:426} INFO - Running <TaskInstance: duplicate_check.run_duplicate_check duplicate_check__2025-05-20T14:52:10.343704 [running]> on host e153ee340532
[2025-05-20T14:52:11.042+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='duplicate_check' AIRFLOW_CTX_TASK_ID='run_duplicate_check' AIRFLOW_CTX_EXECUTION_DATE='2025-05-20T14:52:10.356457+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='duplicate_check__2025-05-20T14:52:10.343704'
[2025-05-20T14:52:11.043+0000] {taskinstance.py:430} INFO - ::endgroup::
[2025-05-20T14:52:11.107+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2025-05-20T14:52:11.107+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/sqlalchemy/engine/base.py", line 1910, in _execute_context
    self.dialect.do_execute(
  File "/home/airflow/.local/lib/python3.12/site-packages/sqlalchemy/engine/default.py", line 736, in do_execute
    cursor.execute(statement, parameters)
psycopg2.errors.SyntaxError: ОШИБКА:  ошибка синтаксиса (примерное положение: "quoted_table")
LINE 6:             quoted_table = f'"Practic"."cash_flow_fact_claim...
                    ^


The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 235, in execute
    return_value = self.execute_callable()
                   ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 252, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/airflow/dags/Duplicate_check.py", line 26, in run_duplicate_check
    pk_columns = [row[0] for row in conn.execute(text(pk_query)).fetchall()]
                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/sqlalchemy/engine/base.py", line 1385, in execute
    return meth(self, multiparams, params, _EMPTY_EXECUTION_OPTS)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/sqlalchemy/sql/elements.py", line 334, in _execute_on_connection
    return connection._execute_clauseelement(
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/sqlalchemy/engine/base.py", line 1577, in _execute_clauseelement
    ret = self._execute_context(
          ^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/sqlalchemy/engine/base.py", line 1953, in _execute_context
    self._handle_dbapi_exception(
  File "/home/airflow/.local/lib/python3.12/site-packages/sqlalchemy/engine/base.py", line 2134, in _handle_dbapi_exception
    util.raise_(
  File "/home/airflow/.local/lib/python3.12/site-packages/sqlalchemy/util/compat.py", line 211, in raise_
    raise exception
  File "/home/airflow/.local/lib/python3.12/site-packages/sqlalchemy/engine/base.py", line 1910, in _execute_context
    self.dialect.do_execute(
  File "/home/airflow/.local/lib/python3.12/site-packages/sqlalchemy/engine/default.py", line 736, in do_execute
    cursor.execute(statement, parameters)
sqlalchemy.exc.ProgrammingError: (psycopg2.errors.SyntaxError) ОШИБКА:  ошибка синтаксиса (примерное положение: "quoted_table")
LINE 6:             quoted_table = f'"Practic"."cash_flow_fact_claim...
                    ^

[SQL: 
            SELECT a.attname
            FROM pg_index i
            JOIN pg_attribute a ON a.attrelid = i.indrelid AND a.attnum = ANY(i.indkey)
            WHERE i.indrelid = format('%%I.%%I', 'Practic', 'cash_flow_fact_claim_x_ins_risk')::regclass AND i.indisprimary;
            quoted_table = f'"Practic"."cash_flow_fact_claim_x_ins_risk"
        ]
(Background on this error at: https://sqlalche.me/e/14/f405)
[2025-05-20T14:52:11.118+0000] {taskinstance.py:1206} INFO - Marking task as FAILED. dag_id=duplicate_check, task_id=run_duplicate_check, run_id=duplicate_check__2025-05-20T14:52:10.343704, execution_date=20250520T145210, start_date=20250520T145210, end_date=20250520T145211
[2025-05-20T14:52:11.130+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 20 for task run_duplicate_check ((psycopg2.errors.SyntaxError) ОШИБКА:  ошибка синтаксиса (примерное положение: "quoted_table")
LINE 6:             quoted_table = f'"Practic"."cash_flow_fact_claim...
                    ^

[SQL: 
            SELECT a.attname
            FROM pg_index i
            JOIN pg_attribute a ON a.attrelid = i.indrelid AND a.attnum = ANY(i.indkey)
            WHERE i.indrelid = format('%%I.%%I', 'Practic', 'cash_flow_fact_claim_x_ins_risk')::regclass AND i.indisprimary;
            quoted_table = f'"Practic"."cash_flow_fact_claim_x_ins_risk"
        ]
(Background on this error at: https://sqlalche.me/e/14/f405); 103)
[2025-05-20T14:52:11.135+0000] {local_task_job_runner.py:243} INFO - Task exited with return code 1
[2025-05-20T14:52:11.149+0000] {taskinstance.py:3503} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2025-05-20T14:52:11.155+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
